# AIKI

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: rename_project.sh
.github/backup/: requirements-test.txt  setup.py
.github/workflows/: main.yml
aiki/: __main__.py  base.py  cli.py
tests/: test_base.py
